[gd_scene load_steps=16 format=3 uid="uid://c02r4tj8rqvmo"]

[ext_resource type="Texture2D" uid="uid://drjoya1j38i21" path="res://assets/ambientcg.com/Carpet003_1K-JPG_Color.jpg" id="1_e6qef"]
[ext_resource type="Script" path="res://demo.gd" id="1_pjmhy"]
[ext_resource type="PackedScene" uid="uid://djcm4e8e6dwbf" path="res://addons/godot_animation_recorder/tracker/tracker_recorder.tscn" id="3_mxy32"]
[ext_resource type="PackedScene" uid="uid://bhc6nngwjdvum" path="res://assets/test_chan/Test-Chan.fbx" id="3_rdwmc"]
[ext_resource type="PackedScene" uid="uid://b36qa4p6kl7k1" path="res://addons/godot_animation_recorder/tracker/tracker_player.tscn" id="4_1qj27"]
[ext_resource type="PackedScene" uid="uid://cay8oh2ll7yxi" path="res://assets/test_kun/Test-Kun.fbx" id="4_2lusk"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_o2dlm"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_vnxsk"]
sky_material = SubResource("ProceduralSkyMaterial_o2dlm")

[sub_resource type="Environment" id="Environment_2w2sf"]
background_mode = 2
sky = SubResource("Sky_vnxsk")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_55n8g"]
albedo_texture = ExtResource("1_e6qef")
uv1_scale = Vector3(3, 3, 3)

[sub_resource type="QuadMesh" id="QuadMesh_1vgh2"]
material = SubResource("StandardMaterial3D_55n8g")
size = Vector2(8, 8)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_stsmb"]
albedo_color = Color(1, 1, 0, 1)

[sub_resource type="TorusMesh" id="TorusMesh_hgul2"]
material = SubResource("StandardMaterial3D_stsmb")
outer_radius = 0.6
rings = 32
ring_segments = 8

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ik41p"]
albedo_color = Color(1, 1, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_ouj5y"]
material = SubResource("StandardMaterial3D_ik41p")
radius = 0.05
height = 0.2

[node name="Demo" type="Node3D"]
script = ExtResource("1_pjmhy")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_2w2sf")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.86596, -0.433012, 0.250226, 0.250226, 0.80835, 0.532876, -0.433012, -0.398837, 0.80835, 0, 0, 0)
light_energy = 0.5
shadow_enabled = true

[node name="Ground" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("QuadMesh_1vgh2")

[node name="Camera3D" type="Camera3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.939693, 0.0593911, -0.336824, 0, 0.984808, 0.173648, 0.34202, -0.163176, 0.925417, -1.24294, 1.42214, 2.31797)

[node name="TrackerRecorder" parent="." instance=ExtResource("3_mxy32")]
unique_name_in_owner = true
body_tracker_name = &"/vmc/body_tracker"
face_tracker_name = &"/vmc/face_tracker"
left_hand_tracker_name = &""
right_hand_tracker_name = &""

[node name="TrackerPlayer" parent="." instance=ExtResource("4_1qj27")]
unique_name_in_owner = true

[node name="Chan" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.6, 0, 0)

[node name="ChanAvatar" type="XRNode3D" parent="Chan"]
transform = Transform3D(0.999311, 0, 0.0371093, 0, 1, 0, -0.0371093, 0, 0.999311, -0.00895814, 0, -0.0917108)
tracker = &"/rokoko/body_tracker"

[node name="Test-Chan" parent="Chan/ChanAvatar" instance=ExtResource("3_rdwmc")]

[node name="XRBodyModifier3D" type="XRBodyModifier3D" parent="Chan/ChanAvatar/Test-Chan/Armature/Skeleton3D" index="2"]
body_tracker = &"/vmc/body_tracker"
bone_update = 1

[node name="XRFaceModifier3D" type="XRFaceModifier3D" parent="Chan/ChanAvatar"]
face_tracker = &"/vmc/face_tracker"
target = NodePath("../Test-Chan/Armature/Skeleton3D/Body")

[node name="GroundRing" type="MeshInstance3D" parent="Chan/ChanAvatar"]
mesh = SubResource("TorusMesh_hgul2")
skeleton = NodePath("../Test-Chan")

[node name="Forward" type="MeshInstance3D" parent="Chan/ChanAvatar/GroundRing"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -0.6)
mesh = SubResource("SphereMesh_ouj5y")

[node name="Kun" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.6, 0, 0)

[node name="KunAvatar" type="XRNode3D" parent="Kun"]
transform = Transform3D(0.999311, 0, 0.0371093, 0, 1, 0, -0.0371093, 0, 0.999311, -0.00895814, 0, -0.0917108)
tracker = &"/rokoko/body_tracker"

[node name="Test-Kun" parent="Kun/KunAvatar" instance=ExtResource("4_2lusk")]

[node name="XRBodyModifier3D" type="XRBodyModifier3D" parent="Kun/KunAvatar/Test-Kun/Armature/Skeleton3D" index="2"]
body_tracker = &"/recording/body_tracker"
bone_update = 1

[node name="XRFaceModifier3D" type="XRFaceModifier3D" parent="Kun/KunAvatar"]
face_tracker = &"/recording/face_tracker"
target = NodePath("../Test-Kun/Armature/Skeleton3D/Body")

[node name="GroundRing" type="MeshInstance3D" parent="Kun/KunAvatar"]
mesh = SubResource("TorusMesh_hgul2")

[node name="Forward" type="MeshInstance3D" parent="Kun/KunAvatar/GroundRing"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -0.6)
mesh = SubResource("SphereMesh_ouj5y")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -417.0
offset_top = -41.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Godot XR Animation Recorder"
horizontal_alignment = 1

[node name="VSeparator" type="VSeparator" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="RecordButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
toggle_mode = true
text = "Record"

[node name="PlayButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Play"

[connection signal="toggled" from="PanelContainer/MarginContainer/HBoxContainer/RecordButton" to="." method="_on_record_button_toggled"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]

[editable path="Chan/ChanAvatar/Test-Chan"]
[editable path="Kun/KunAvatar/Test-Kun"]
